# rustc-bug-1

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main_simple.rs
